--- a/sdk-node/package.json
+++ b/sdk-node/package.json
@@ -44,6 +44,9 @@
     "msw": "2.6.0",
     "typescript": "5.6.3"
   },
+  "overrides": {
+    "form-data": "4.0.4"
+  },
   "lint-staged": {
     "*.{js,css,md,ts,tsx}": "prettier --write"
   },
